--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2005-05-05  shadow  <shadowin@users.sourceforge.jp>
+
+        * monalibc/stdlib.cpp: bsearch’Ç‰Á
+
+        * include/monalibc/stdlib.h: bsearch’Ç‰Á
+
 2005-05-04  shadow  <shadowin@users.sourceforge.jp>
 
         * monalibc/math.cpp: log exp pow log10 ceil’Ç‰Á
