--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-09  shadow  <shadowin@users.sourceforge.jp>
+
+        * monalibc/stdlib.cpp: strtoièCê≥
+
 2005-05-09  Yamami  <yamamimail@users.sourceforge.jp>
      * apps/non-gui/ping : í«â¡
      
