--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,6 @@
+2005-05-10  Yamami  <yamamimail@users.sourceforge.jp>
+     * apps/baygui/pingui : í«â¡
+
 2005-05-09  shadow  <shadowin@users.sourceforge.jp>
 
         * monalibc/stdlib.cpp: strtoièCê≥
