--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-10  bayside
+
+        * include/servers/mouse.h: MSG_MOUSE_SET_CURSOR_POSITION追加
+
+        * src/servers/mouse/main.cpp: MSG_MOUSE_SET_CURSOR_POSITION実装
+
 2005-05-15  Yamami  <yamamimail@users.sourceforge.jp>
      * apps\baygui\baymomsg :追加 簡易メッセージ
      
