--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-18  higepon  <higepon@users.sourceforge.jp>
+
+        * src/lib/monapi/syscall.cpp (syscall_change_base_priority): 追加。
+
 2004-05-10  bayside
 
         * include/servers/mouse.h: MSG_MOUSE_SET_CURSOR_POSITION追加
@@ -6,9 +10,9 @@
 
 2005-05-15  Yamami  <yamamimail@users.sourceforge.jp>
      * apps\baygui\baymomsg :追加 簡易メッセージ
-     
+
      * src/servers/mones/MoUdp.h : 追加
-     
+
      * src/servers/mones/MoUdp.cpp : 追加
 
 2005-05-15  higepon  <higepon@users.sourceforge.jp>
