--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-20  bayside
+
+        * src/lib/gui/System/Mona/Forms/Application.cpp: 新しいタイマーを使うように修正
+
+        * src/lib/gui/System/Mona/Forms/Timer.cpp: 新しいタイマーを使うように修正
+
 2005-05-18  higepon  <higepon@users.sourceforge.jp>
 
         * src/lib/monapi/syscall.cpp (syscall_change_base_priority): 追加。
