*** empty log message ***

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-18  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/Segments.cpp: スタック自動伸張対応。
+
+        * src/kernel/Process.cpp :STACK_SIZE を 4MBに。これはスタック自動伸長が実装されるまでは意味を成さない。スレッド間でスタックが4MB離れていることを意味する。
+
 2005-06-17  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/MemoryManager.cpp : どさくさにまぎれてカーネル内も入れ替え。
