--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,11 @@
 2005-06-19  higepon  <higepon@users.sourceforge.jp>
 
+        * env/monapi-*.inc: .asm .oの記述を削除 
+
+        * apps/gui/fire/Makefile (.SUFFIXES): .asm .o の記述を追加
+
+        * apps/baygui/gfire/Makefile: .asm .o の記述を追加
+
         * Mona-0.3.0alpha3-fix-include.diffを適用。
 
         * Mona-0.3.0alpha3-nask.diffを適用。
