--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-06  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/Segments.cpp (faultHandler): SharedMemoryObjectに共有しないページを含められるように変更。
+
+        * src/kernel/Segments.cpp : SharedMemorySegment。new時に、write/readを指定できるように。
+
 2004-07-06  bayside
 
         * include/baygui/*.h: SDL用コード挿入開始
