--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-09  shadow  <shadowin@users.sourceforge.jp>
+
+        * monalibcにtmpmonalibc取り込み第一弾
+
 2005-07-08  Yamami  <yamamimail@users.sourceforge.jp>
 
         * src/servers/mones/MoPacUtl.cpp : gcc3.4系で、ISO C++ forbids cast ..のエラーでコンパイルできない不具合を修正
