gui/messages.h -> severs/gui.h

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-04  bayside
+
+        * include/serves/gui.h: include/gui/message.h ‚©‚çˆÚ“®
+
 2005-07-29  bayside
 
         * src/servers/gui/Window.cpp: •”•ª•`‰æ‚É‘Î‰ž
