--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-11  bayside
+
+        * Graphics/libbaygui/lang/String.cpp: CString‚ğŒ³‚É‰ü‘¢
+
 2005-08-10  bayside
 
         * Graphics/libbaygui: V‹K’Ç‰Á
