*** empty log message ***

--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -8,6 +8,8 @@
 
         * Graphics/libbaygui/lang/String.cpp: CString‚ğŒ³‚É‰ü‘¢
 
+        * Graphics/libjpegls: V‹K’Ç‰Á
+
 2005-08-10  bayside
 
         * Graphics/libbaygui: V‹K’Ç‰Á
