*** empty log message ***

--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-16  bayside
+
+        * Games/infones: V‹K’Ç‰Á
+
+        * Multimedia/monapeg: V‹K’Ç‰Á
+
 2005-08-15  bayside
 
         * Devel/stlport: V‹K’Ç‰Á
