--- a/contrib_0.3/ChangeLog
+++ b/contrib_0.3/ChangeLog
@@ -2,6 +2,8 @@
 
         * Games/infones: V‹K’Ç‰Á
 
+        * Graphics/jpegdemo: V‹K’Ç‰Á
+
         * Multimedia/monapeg: V‹K’Ç‰Á
 
 2005-08-15  bayside
